@@ -25,39 +25,43 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.withSettings;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Vector;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.quality.Strictness;
 import org.parosproxy.paros.Constant;
 import org.parosproxy.paros.control.Control;
 import org.parosproxy.paros.core.scanner.Alert;
+import org.parosproxy.paros.db.Database;
+import org.parosproxy.paros.db.RecordAlert;
+import org.parosproxy.paros.db.TableAlert;
 import org.parosproxy.paros.extension.ExtensionLoader;
 import org.parosproxy.paros.model.Model;
-import org.zaproxy.zap.extension.alert.ExtensionAlert;
 import org.zaproxy.zap.utils.I18N;
 
 /** Unit tests for {@link AlertsResource}. */
 class AlertsResourceUnitTest {
 
-    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
     private ExtensionLoader extensionLoader;
-    private ExtensionAlert extAlert;
+    private TableAlert tableAlert;
     private AlertsResource resource;
 
     @BeforeEach
-    void setUp() {
+    void setUp() throws Exception {
         Constant.messages = new I18N(Locale.ROOT);
         extensionLoader =
                 mock(ExtensionLoader.class, withSettings().strictness(Strictness.LENIENT));
-        extAlert = mock(ExtensionAlert.class, withSettings().strictness(Strictness.LENIENT));
-        given(extensionLoader.getExtension(ExtensionAlert.class)).willReturn(extAlert);
-        Control.initSingletonForTesting(mock(Model.class), extensionLoader);
+        tableAlert = mock(TableAlert.class, withSettings().strictness(Strictness.LENIENT));
+
+        Model model = mock(Model.class, withSettings().strictness(Strictness.LENIENT));
+        Database db = mock(Database.class, withSettings().strictness(Strictness.LENIENT));
+        given(model.getDb()).willReturn(db);
+        given(db.getTableAlert()).willReturn(tableAlert);
+
+        Control.initSingletonForTesting(model, extensionLoader);
+        Model.setSingletonForTesting(model);
         resource = new AlertsResource();
     }
 
@@ -68,79 +72,130 @@ class AlertsResourceUnitTest {
     }
 
     @Test
-    void shouldReturnEmptyArrayWhenExtensionAlertNotInstalled() {
-        given(extensionLoader.getExtension(ExtensionAlert.class)).willReturn(null);
+    void shouldReturnEmptyArrayWhenNoAlerts() throws Exception {
+        // Given
+        given(tableAlert.getAlertList()).willReturn(new Vector<>());
 
+        // When
         String content = resource.readContent();
 
-        assertThat(parseJsonArray(content).size(), equalTo(0));
+        // Then
+        assertThat(content, equalTo("[]"));
     }
 
     @Test
-    void shouldReturnSummaryWithRiskAsString() {
-        Alert alert = new Alert(100, Alert.RISK_HIGH, Alert.CONFIDENCE_MEDIUM, "XSS");
-        alert.setAlertRef("100-1");
-        given(extAlert.getAllAlerts()).willReturn(List.of(alert));
+    void shouldReturnSummaryWithRiskAsString() throws Exception {
+        // Given
+        RecordAlert rec =
+                mockRecordAlert(1, 100, "100-1", Alert.RISK_HIGH, Alert.CONFIDENCE_MEDIUM, "XSS");
+        given(tableAlert.getAlertList()).willReturn(new Vector<>(List.of(1)));
+        given(tableAlert.read(1)).willReturn(rec);
 
+        // When
         String content = resource.readContent();
-        JsonNode array = parseJsonArray(content);
 
-        assertThat(array.size(), equalTo(1));
-        assertThat(array.get(0).get("risk").asText(), equalTo(Alert.MSG_RISK[Alert.RISK_HIGH]));
-        assertThat(array.get(0).get("name").asText(), equalTo("XSS"));
-        assertThat(array.get(0).get("alertRef").asText(), equalTo("100-1"));
-        assertThat(array.get(0).get("instanceCount").asInt(), equalTo(1));
-        assertThat(array.get(0).get("instancesUri").asText(), equalTo("zap://alerts/100-1"));
+        // Then
+        assertThat(
+                content,
+                equalTo(
+                        "[{\"name\":\"XSS\","
+                                + "\"risk\":\"High\","
+                                + "\"pluginId\":100,"
+                                + "\"alertRef\":\"100-1\","
+                                + "\"systemic\":false,"
+                                + "\"instanceCount\":1,"
+                                + "\"instancesUri\":\"zap://alerts/100-1\"}]"));
     }
 
     @Test
-    void shouldOrderAlertsByRiskHighestFirst() {
-        Alert lowAlert = new Alert(100, Alert.RISK_LOW, Alert.CONFIDENCE_LOW, "Low");
-        lowAlert.setAlertRef("100-1");
-        Alert highAlert = new Alert(200, Alert.RISK_HIGH, Alert.CONFIDENCE_HIGH, "High");
-        highAlert.setAlertRef("200-1");
-        Alert mediumAlert = new Alert(300, Alert.RISK_MEDIUM, Alert.CONFIDENCE_MEDIUM, "Medium");
-        mediumAlert.setAlertRef("300-1");
-        given(extAlert.getAllAlerts()).willReturn(Arrays.asList(lowAlert, highAlert, mediumAlert));
+    void shouldOrderAlertsByRiskHighestFirst() throws Exception {
+        // Given
+        RecordAlert low =
+                mockRecordAlert(1, 100, "100-1", Alert.RISK_LOW, Alert.CONFIDENCE_LOW, "Low");
+        RecordAlert high =
+                mockRecordAlert(2, 200, "200-1", Alert.RISK_HIGH, Alert.CONFIDENCE_HIGH, "High");
+        RecordAlert medium =
+                mockRecordAlert(
+                        3, 300, "300-1", Alert.RISK_MEDIUM, Alert.CONFIDENCE_MEDIUM, "Medium");
+        given(tableAlert.getAlertList()).willReturn(new Vector<>(List.of(1, 2, 3)));
+        given(tableAlert.read(1)).willReturn(low);
+        given(tableAlert.read(2)).willReturn(high);
+        given(tableAlert.read(3)).willReturn(medium);
 
+        // When
         String content = resource.readContent();
-        JsonNode array = parseJsonArray(content);
 
-        assertThat(array.size(), equalTo(3));
-        assertThat(array.get(0).get("risk").asText(), equalTo(Alert.MSG_RISK[Alert.RISK_HIGH]));
-        assertThat(array.get(1).get("risk").asText(), equalTo(Alert.MSG_RISK[Alert.RISK_MEDIUM]));
-        assertThat(array.get(2).get("risk").asText(), equalTo(Alert.MSG_RISK[Alert.RISK_LOW]));
+        // Then
+        assertThat(
+                content,
+                equalTo(
+                        "[{\"name\":\"High\","
+                                + "\"risk\":\"High\","
+                                + "\"pluginId\":200,"
+                                + "\"alertRef\":\"200-1\","
+                                + "\"systemic\":false,"
+                                + "\"instanceCount\":1,"
+                                + "\"instancesUri\":\"zap://alerts/200-1\"},"
+                                + "{\"name\":\"Medium\","
+                                + "\"risk\":\"Medium\","
+                                + "\"pluginId\":300,"
+                                + "\"alertRef\":\"300-1\","
+                                + "\"systemic\":false,"
+                                + "\"instanceCount\":1,"
+                                + "\"instancesUri\":\"zap://alerts/300-1\"},"
+                                + "{\"name\":\"Low\","
+                                + "\"risk\":\"Low\","
+                                + "\"pluginId\":100,"
+                                + "\"alertRef\":\"100-1\","
+                                + "\"systemic\":false,"
+                                + "\"instanceCount\":1,"
+                                + "\"instancesUri\":\"zap://alerts/100-1\"}]"));
     }
 
     @Test
-    void shouldGroupAlertsByAlertRef() {
-        Alert alert1 = new Alert(100, Alert.RISK_HIGH, Alert.CONFIDENCE_MEDIUM, "XSS");
-        alert1.setAlertRef("100-1");
-        Alert alert2 = new Alert(100, Alert.RISK_HIGH, Alert.CONFIDENCE_MEDIUM, "XSS");
-        alert2.setAlertRef("100-1");
-        given(extAlert.getAllAlerts()).willReturn(List.of(alert1, alert2));
+    void shouldGroupAlertsByAlertRef() throws Exception {
+        // Given
+        RecordAlert rec1 =
+                mockRecordAlert(1, 100, "100-1", Alert.RISK_HIGH, Alert.CONFIDENCE_MEDIUM, "XSS");
+        RecordAlert rec2 =
+                mockRecordAlert(2, 100, "100-1", Alert.RISK_HIGH, Alert.CONFIDENCE_MEDIUM, "XSS");
+        given(tableAlert.getAlertList()).willReturn(new Vector<>(List.of(1, 2)));
+        given(tableAlert.read(1)).willReturn(rec1);
+        given(tableAlert.read(2)).willReturn(rec2);
 
-        String content = resource.readContent();
-        JsonNode array = parseJsonArray(content);
-
-        assertThat(array.size(), equalTo(1));
-        assertThat(array.get(0).get("instanceCount").asInt(), equalTo(2));
-    }
-
-    @Test
-    void shouldReturnEmptyArrayWhenNoAlerts() {
-        given(extAlert.getAllAlerts()).willReturn(Collections.emptyList());
-
+        // When
         String content = resource.readContent();
 
-        assertThat(parseJsonArray(content).size(), equalTo(0));
+        // Then
+        assertThat(
+                content,
+                equalTo(
+                        "[{\"name\":\"XSS\","
+                                + "\"risk\":\"High\","
+                                + "\"pluginId\":100,"
+                                + "\"alertRef\":\"100-1\","
+                                + "\"systemic\":false,"
+                                + "\"instanceCount\":2,"
+                                + "\"instancesUri\":\"zap://alerts/100-1\"}]"));
     }
 
-    private static JsonNode parseJsonArray(String json) {
-        try {
-            return OBJECT_MAPPER.readTree(json);
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to parse JSON: " + json, e);
-        }
+    private static RecordAlert mockRecordAlert(
+            int alertId, int pluginId, String alertRef, int risk, int confidence, String name) {
+        RecordAlert rec = mock(RecordAlert.class, withSettings().strictness(Strictness.LENIENT));
+        given(rec.getAlertId()).willReturn(alertId);
+        given(rec.getPluginId()).willReturn(pluginId);
+        given(rec.getAlertRef()).willReturn(alertRef);
+        given(rec.getRisk()).willReturn(risk);
+        given(rec.getConfidence()).willReturn(confidence);
+        given(rec.getAlert()).willReturn(name);
+        given(rec.getDescription()).willReturn("");
+        given(rec.getSolution()).willReturn("");
+        given(rec.getUri()).willReturn("");
+        given(rec.getParam()).willReturn("");
+        given(rec.getAttack()).willReturn("");
+        given(rec.getOtherInfo()).willReturn("");
+        given(rec.getReference()).willReturn("");
+        given(rec.getEvidence()).willReturn("");
+        return rec;
     }
 }
